--- a/template.ipynb
+++ b/template.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# League of Legends Pro Play Analysis: Does Early Game Gold Lead Predict Victory?\n",
     "\n",
-    "**Name(s)**: jul187\n",
+    "**Name(s)**: Junle Li\n",
     "\n",
     "**Website Link**: https://jul187-creator.github.io/lol-analysis-dsc80/"
    ]
